test/1.2/errors/T_EDBFUNC.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

bank b1 {
    /// ERROR EDBFUNC
    parameter function = 1;
}

bank b2 {
    /// ERROR EDBFUNC
    parameter function = 1;
}

bank ba[2] {
    /// ERROR EDBFUNC
    parameter function = 2;
}
